--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -1,5 +1,5 @@
 - if request.path != '/properties/new'
-  = form_for @property, :html => {:data => {:abide => ''}, :id => "general_form"}, remote: true do |f|
+  = form_for @property, :html => {:data => {:abide => ''}, :id => "general_form"},:url => update_general_property_url(@property),:method => :post, remote: true do |f|
     .row
       .large-6.columns
         = f.text_field :name, placeholder: 'Property name', :required => ''
@@ -11,3 +11,15 @@
       .large-12.columns
         = f.text_area :description, placeholder: 'Property description', :required => '', :rows => '10'
         %small.error Description is required
+- else
+  .row
+    .large-6.columns
+      = f.text_field :name, placeholder: 'Property name', :required => ''
+      %small.error Name is required
+    .large-6.columns
+      = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name,  {:include_blank => 'Property type'}, {:required => ''}
+      %small.error Property type is required
+  .row
+    .large-12.columns
+      = f.text_area :description, placeholder: 'Property description', :required => '', :rows => '10'
+      %small.error Description is required
