edit property page fixes 2

--- a/app/views/properties/_promo_image.html.haml
+++ b/app/views/properties/_promo_image.html.haml
@@ -5,4 +5,4 @@
 %br/
 = form_for @property, :html => {:id => "promo-upload-form"} ,  :url => update_promo_image_property_url(@property),:method => :post, remote: true do |f|
   = f.file_field :promo_image, :id => "promo-image-upload", :accept => "image/png,image/gif,image/jpeg"
-            
+  =f.submit          
