--- a/app/views/properties/update_promo_image.js.haml
+++ b/app/views/properties/update_promo_image.js.haml
@@ -1,2 +1,2 @@
-//$("#overlay").fadeOut();
-//$("#promo-image").html("#{escape_javascript(render partial: 'promo_image')}");
+$("#overlay").fadeOut();
+$("#promo-image").html("#{escape_javascript(render partial: 'promo_image')}");
