--- a/app/views/properties/_promo_image.html.haml
+++ b/app/views/properties/_promo_image.html.haml
@@ -1,8 +1,12 @@
-%ul.clearing-thumbs{"data-clearing" => ""}
-  %li
-    %a{href: @property.promo_image.url}
-      %img{src: @property.promo_image.url(:medium)}
-%br/
-= form_for @property, :html => {:id => "promo-upload-form"} ,  :url => update_promo_image_property_url(@property),:method => :post, remote: true do |f|
-  = f.file_field :promo_image, :id => "promo-image-upload", :accept => "image/png,image/gif,image/jpeg"
-  =f.submit          
+= form_for @property, :html => {:data => {:abide => ''}, :id => "general_form"},:url => update_promo_image_property_url(@property),:method => :post, remote: true do |f|
+  .row
+    .large-12.columns
+      %ul.clearing-thumbs{"data-clearing" => ""}
+        %li
+          %a{href: @property.promo_image.url}
+            %img{src: @property.promo_image.url(:medium)}
+  .row
+    .large-12.columns
+      %br/
+      = f.file_field :promo_image, :id => "promo-image-upload", :accept => "image/png,image/gif,image/jpeg"
+      = f.submit 'Update Promo Image' ,:class => 'button tiny', :disabled => true
