--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,55 +1,28 @@
-#overlay
-#preloader
-  #status
-%br/
 .row
   .small-12.large-12.columns
-    .row  
-      .small-3.large-3.columns
-        #promo-image
-          = render partial: 'promo_image'               
-        %ul.side-nav.menu-nav
-          %li.menu-nav-tab.active{id: "general-tab"}
-            %a{href: "#"} Headline
-          %li.menu-nav-tab{id: "location-tab"}
-            %a{href: "#"} Location
-          %li.divider
-          %li.menu-nav-tab{id: "gallery-tab"}
-            %a{href: "#"} Gallery
-          %li.menu-nav-tab{id: "descriptions-tab"}
-            %a{href: "#"} Descriptions
-          %li.menu-nav-tab{id: "features-tab"}
-            %a{href: "#"} Features
-          %li.divider
-          %li.menu-nav-tab{id: "prices-tab"}
-            %a{href: "#"} Prices
-          %li.menu-nav-tab{id: "availabilty-tab"}
-            %a{href: "#"} Availabilty  
-      .small-6.large-6.columns
-        .row
-          .large-12.columns
-            .main-content
-              #general
-                #general-form 
-                  = render "general"
-                = render "sliders"
-              #location
-                /= render "location"
-                .row
-                  .small-12.large-12.columns
-                    /#edit-property-map
-              #gallery
-                /= render "gallery"
-              #descriptions
-                /= render "gallery" 
-              #features
-                /= render "features", :f=> f             
-        .row
-          %br/
-          .large-6.columns
-          .large-6.columns
-            /= link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
-      .small-3.large-3.columns
-        &nbsp;
-            
-      
+    %p
+      %a{name: "general"}
+    %br/
+    %h4.subheader.magellan-menu{"data-magellan-destination"=>"general"} General
+  .row
+    .small-4.large-4.columns
+      = render "promo_image" 
+    .small-8.large-8.columns  
+      = render "general"
+.row
+  .small-12.large-12.columns
+    %p
+      %a{name: "location"}
+    %br/
+    %h4.subheader.magellan-menu{"data-magellan-destination"=>"location"} Location
+    .row
+      = render "general"
+.row
+  .small-12.large-12.columns
+    %p
+      %a{name: "gallery"}
+    %br/  
+    %h4.subheader.magellan-menu{"data-magellan-destination"=>"gallery"} Gallery
+    .row
+      = render "general"
+    
