--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,5 +1,8 @@
-- flash.each do |name, msg|
-   - if msg.is_a?(String)
-      .alert-box.success{"data-alert" => ""}
-         = content_tag :div, msg, :id => "flash_#{name}"
-         %a.close{href: "#"} ×
+.row
+  .small-6.large-6.columns
+
+    - flash.each do |name, msg|
+      - if msg.is_a?(String)
+        .alert-box.success{"data-alert" => ""}
+          = content_tag :div, msg, :id => "flash_#{name}"
+          %a.close{href: "#"} ×
