--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,9 @@
   </head>
 
   <body>
+    <%= render 'layouts/overlay' %>
+    <%= render 'layouts/spinner' %>
     <%= render 'layouts/navigation' %>
-    <div id="messages">
-      <%= render 'layouts/messages' %>   
-    </div>
     <%= yield %>
     <%= javascript_include_tag "application" %>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
