--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -6,7 +6,8 @@
     %h4.subheader.magellan-menu{"data-magellan-destination"=>"general"} General
   .row
     .small-4.large-4.columns
-      = render "promo_image" 
+      #promo_image
+        = render "promo_image" 
     .small-8.large-8.columns  
       = render "general"
 .row
