--- a/app/views/properties/update_promo_image.js.haml
+++ b/app/views/properties/update_promo_image.js.haml
@@ -1,1 +1,8 @@
-$("#promo-image").html("#{escape_javascript(render partial: 'promo_image')}");
+$("#promo_image").html("#{escape_javascript(render partial: 'promo_image')}");
+$("messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
+$('#overlay').fadeOut();
+$('#promo_image_upload').on('change', function () {
+console.log('promo image');
+$('#promo_image_form').submit();
+$('#overlay').fadeIn();
+});
