ajax and messages

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -52,6 +52,8 @@
             = link_to "Sign up", new_user_registration_path 
           %li.top-nav.active{id: "nav5"}
             = link_to 'Login',new_user_session_path
+  #messages
+    = render "layouts/messages"
   
   //sub navs
   - if request.path == '/properties/'+params[:id]+'/edit'  
