--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -2,31 +2,28 @@
   = form_for @property, :html => {:data => {:abide => ''}, :id => "general_form"},:url => update_general_property_url(@property),:method => :post, remote: true do |f|
     .row
       .large-6.columns
-        = f.text_field :name, placeholder: 'Property name', :required => ''
+        = f.text_field :name, placeholder: 'Property name', :id => 'property_name', :required => ''
         %small.error Name is required
       .large-6.columns
         = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name,  {:include_blank => 'Property type'}, {:required => ''}
         %small.error Property type is required
     .row
       .large-12.columns
-        = f.text_area :description, placeholder: 'Property description', :required => '', :rows => '10'
+        = f.text_area :description, placeholder: 'Property description', :required => '',:id => 'property_description', :rows => '10'
         %small.error Description is required
     .row
       .large-3.columns
         %label= 'No of bedrooms'
-        = f.select :bedrooms, [['1',1],['2',2]],{:include_blank => ''}, {:required => ''}
+        = f.select :bedrooms, [['1',1],['2',2]],{:include_blank => ''}, {:required => '', :id => 'property_bedrooms'}
         %small.error No. of bedrooms required
       .large-3.columns
         %label= 'Capacity'
-        = f.select :capacity, [['1',1],['2',2]],{:include_blank => ''}, {:required => ''}
+        = f.select :capacity, [['1',1],['2',2]],{:include_blank => ''}, {:required => '', :id => 'property_capacity'}
         %small.error Capacity required
       .large-3.columns
         &nbsp;
       .large-3.columns
         &nbsp;
-    .row
-      %hr
-      = f.submit 'Update' , :disabled => true, :class => 'button right'
 - else
   .row
     .large-6.columns
