--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -8,8 +8,9 @@
     .small-4.large-4.columns
       #promo_image
         = render "promo_image" 
-    .small-8.large-8.columns  
-      = render "general"
+    .small-8.large-8.columns
+      #general
+        = render "general"
 .row
   .small-12.large-12.columns
     %p
