--- a/app/views/properties/update_general.js.haml
+++ b/app/views/properties/update_general.js.haml
@@ -8,8 +8,33 @@ $("#messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
 //console.log($('#bedroom-slider').attr('data-slider'));
 //console.log($('#bedroom-input').val());
 //$(document).foundation();
-$(document).foundation('reflow');
+//$(document).foundation('reflow');
 //$('#general').foundation({bindings: 'events'});
 //setTimeout(function(){$(document).foundation('reflow')}, 500);
 
+//=============================================================
+// General Section Update
+//=============================================================
+$('#property_name').on('change', function() {
+$('#general_form').submit();   
+});
+$('#property_name').on('change', function () {
+$('#general_form').submit();
+});
+
+$('#property_property_type_id').on('change', function () {
+$('#general_form').submit();
+});
+
+$('#property_bedrooms').on('change', function () {
+$('#general_form').submit();
+});
+
+$('#property_capacity').on('change', function () {
+$('#general_form').submit();
+});
+
+$('#property_description').on('change', function () {
+$('#general_form').submit();
+});  
 
