--- a/app/views/properties/_menu_edit.html.haml
+++ b/app/views/properties/_menu_edit.html.haml
@@ -2,7 +2,7 @@
   .magellan-container{"data-magellan-expedition" => "", "data-options" => "destination_threshold:75; throttle_delay:0;"}
     %dl.sub-nav
       %dd{"data-magellan-arrival" => "general"}
-        %a{href: "#general"} General
+        %a{href: "#general", id: 'general_link'} General
       %dd{"data-magellan-arrival" => "location"}
         %a{href: "#location"} Location
       %dd{"data-magellan-arrival" => "gallery"}
