--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -21,3 +21,6 @@
             
     .small-6.large-6.columns
       #new-property-map
+
+- content_for :javascript_includes do
+  = javascript_include_tag "properties.js"
