--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -23,4 +23,4 @@
       #new-property-map
 
 - content_for :javascript_includes do
-  = javascript_include_tag "properties.js"
+  = javascript_include_tag "properties/general.js"
