--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
+    <div id='navigation'>
+      <%= render 'layouts/navigation' %>
+    </div>
   </head>
 
   <body>
-    <%= render 'layouts/navigation' %>
-    <%= render 'layouts/overlay' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
     <%= yield :javascript_includes %>
