--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,10 +1,13 @@
 - content_for :javascript_includes do
   = javascript_include_tag "properties/general.js"
   = javascript_include_tag "properties/edit_form.js"   
+#overlay
 #preloader
   #status
 .row
   .small-12.large-12.columns
+    #messages
+      = render "layouts/messages"
     %p
       %a{name: "general"}
     %br/
