--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -6,35 +6,39 @@
   #status
 .row
   .small-12.large-12.columns
-    #messages
+    #general_messages
       = render "layouts/messages"
     %p
       %a{name: "general"}
     %br/
     %h4.subheader.magellan-menu{"data-magellan-destination"=>"general"} General
-  .row
-    #screen
-      .small-3.large-3.columns
-        #promo_image
-          = render "promo_image" 
-      .small-9.large-9.columns
-        #general
-          = render "general"
-  .row
-    #screen
-      .small-12.large-12.columns
-        %p
-          %a{name: "location"}
-        %br/
-        %h4.subheader.magellan-menu{"data-magellan-destination"=>"location"} Location
-        #location
-          = render "location"
-  .row
-    #screen
-      .small-12.large-12.columns
-        %p
-          %a{name: "gallery"}
-        %br/  
-        %h4.subheader.magellan-menu{"data-magellan-destination"=>"gallery"} Gallery
-        .row
-          = render "general"
+.row
+  #screen
+    .small-3.large-3.columns
+      #promo_image
+        = render "promo_image" 
+    .small-9.large-9.columns
+      #general
+        = render "general"
+.row
+  #screen
+    .small-12.large-12.columns
+      %p
+        %a{name: "location"}
+      %br/
+      %h4.subheader.magellan-menu{"data-magellan-destination"=>"location"} Location
+      
+      #location_messages
+        = render "layouts/messages"
+      #location
+        = render "location"
+.row
+  #screen
+    .small-12.large-12.columns
+      %p
+        %a{name: "gallery"}
+      %br/  
+      %h4.subheader.magellan-menu{"data-magellan-destination"=>"gallery"} Gallery
+      .row
+        = render "general"
+        
