--- a/app/views/properties/update_general.js.haml
+++ b/app/views/properties/update_general.js.haml
@@ -1,5 +1,5 @@
 //Update intitial values
-$("#messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
+$("#general_messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
 $("#general").html("#{escape_javascript(render partial: 'general')}");
 //$("#navigation").html("#{escape_javascript(render partial: 'layouts/navigation')}");
 $(document).foundation();
