refactoring edit/new property 3

--- a/app/views/properties/_menu_edit.html.haml
+++ b/app/views/properties/_menu_edit.html.haml
@@ -6,5 +6,9 @@
       %a{href: "#location"} Location
     %dd{"data-magellan-arrival" => "gallery"}
       %a{href: "#gallery"} Gallery
+    %dd{"data-magellan-arrival" => "features"}
+      %a{href: "#features"} Features
+    %dd{"data-magellan-arrival" => "descriptions"}
+      %a{href: "#descriptions"} Descriptions  
     %br/
     %hr
