startings of property features

--- a/app/views/properties/_features.html.haml
+++ b/app/views/properties/_features.html.haml
@@ -4,7 +4,7 @@
     %hr/
     .row
       .small-12.large-12.columns
-        %label Check these out
+        %label General
         %input#checkbox1{type: "checkbox"}/
         %label{for: "checkbox1"} Checkbox 1
         %input#checkbox2{type: "checkbox"}/
