--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -59,7 +59,7 @@
         %a{name: "features"}
       %br/  
       %h4.subheader.magellan-menu{"data-magellan-destination"=>"features"} Features
-      /= render "features"
+      = render "features"
         
 .row
   #screen
