--- a/app/views/property_assets/create.js.haml
+++ b/app/views/property_assets/create.js.haml
@@ -1,8 +1,3 @@
-$('#overlay').fadeOut();
-//$("#images").html("#{escape_javascript(render 'images')}");
-//$("#videos").html("#{escape_javascript(render 'videos')}");
-//$("#docs").html("#{escape_javascript(render 'docs')}");
-$('#asset_upload').on('change', function () {
-document.getElementById('asset_upload_submit').disabled = false;
-});
+console.log('everything works fine');
+$("#images").html("#{escape_javascript(render 'images')}");
   
