--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -59,6 +59,7 @@
         %a{name: "features"}
       %br/  
       %h4.subheader.magellan-menu{"data-magellan-destination"=>"features"} Features
+      %h6.subheader= 'Select the features relevant to this property'
       = render "features"
         
 .row
