--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <div id='navigation'>
       <%= render 'layouts/navigation' %>
     </div>
+    <%= render 'layouts/messages' %>
+   
   </head>
 
   <body>
