--- a/app/views/properties/_location.html.haml
+++ b/app/views/properties/_location.html.haml
@@ -7,6 +7,10 @@
       Drag the marker to update the postion or &nbsp;
       = link_to 'Start over'
       #edit-property-map
+      %br/
+      %hr/
+      =link_to 'Reset', '#', :class=>'button small alert round right'
+
 - else
   = f.hidden_field :lat, :id => "lat", :value => "1"
   = f.hidden_field :lng, :id => "lng", :value => "1"
