--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -69,4 +69,4 @@
         %a{name: "descriptions"}
       %br/  
       %h4.subheader.magellan-menu{"data-magellan-destination"=>"descriptions"} Descriptions
-      /= render "descriptions"
+      = render "descriptions"
