--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,5 +1,5 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
     .alert-box.success.round{"data-alert" => ""}
-      = content_tag :div, msg, :id => "flash_#{name}"
+      = content_tag :div, raw(msg), :id => "flash_#{name}"
       %a.close{href: ""} ×
