--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -23,11 +23,14 @@
               = f.select :capacity, [['1',1],['2',2],['3',3]],{:include_blank => ''}, {:required => '', :id => 'property_capacity'}
               %small.error Capacity required
     .row
-      .large-12.columns
-        %hr
-        =f.submit 'Update', :class=>'button small right', :id => 'edit_submit_button', :disabled => ''
-
-
+      %hr
+      .large-8.columns
+        &nbsp;  
+      .large-2.columns
+        =f.submit 'Update', :class=>'button small round', :id => 'edit_submit_button', :disabled => ''
+      .large-2.columns
+        =link_to 'Reset', '#', :class=>'button small alert round right'
+      
 
 - else
   .large-12.columns
